// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuizSubmissionList loads correctly when data is supplied 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "lightgrey",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "space-between",
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          accessibilityTraits="header"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-heavy",
                "fontSize": 24,
              },
              undefined,
            ]
          }
        >
          All Submissions
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel="Filter Submissions"
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={
          Object {
            "bottom": 15,
            "left": 15,
            "right": 15,
            "top": 15,
          }
        }
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginBottom": 1,
            "opacity": 1,
            "width": "auto",
          }
        }
        testID="submission-list.filter"
        tvParallaxProperties={undefined}
      >
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#374A59",
                    "fontSize": 16,
                    "fontWeight": "500",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-medium",
                },
              ]
            }
          >
            Filter
          </Text>
        </View>
      </View>
    </View>
    <list>
      <item>
        <View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            accessible={true}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "flex": 1,
                },
              ]
            }
            testID="submission-1"
            tvParallaxProperties={undefined}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 40,
                    "marginRight": 8,
                    "width": 40,
                  }
                }
              >
                <View
                  accessibilityLabel=""
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                      Object {
                        "borderRadius": 20,
                      },
                      Object {
                        "backgroundColor": "#F5F5F5",
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "uri": "http://www.fillmurray.com/200/300",
                      }
                    }
                    style={
                      Object {
                        "height": 40,
                        "width": 40,
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingLeft": 8,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                        "fontWeight": "600",
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-semibold",
                      },
                    ]
                  }
                >
                  Bill Murray
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontSize": 14,
                          "paddingTop": 2,
                        },
                        undefined,
                        Object {
                          "color": "#07AF1F",
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                    ]
                  }
                >
                  Submitted
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                      Object {
                        "alignSelf": "center",
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                8
              </Text>
            </View>
          </View>
        </View>
      </item>
    </list>
  </View>
</RCTSafeAreaView>
`;

exports[`QuizSubmissionList loads while pending 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`QuizSubmissionList loads with a filter type 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "lightgrey",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "space-between",
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          accessibilityTraits="header"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-heavy",
                "fontSize": 24,
              },
              undefined,
            ]
          }
        >
          Graded
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel="Filter Submissions"
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={
          Object {
            "bottom": 15,
            "left": 15,
            "right": 15,
            "top": 15,
          }
        }
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginBottom": 1,
            "opacity": 1,
            "width": "auto",
          }
        }
        testID="submission-list.filter"
        tvParallaxProperties={undefined}
      >
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#374A59",
                    "fontSize": 16,
                    "fontWeight": "500",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-medium",
                },
              ]
            }
          >
            Filter (1)
          </Text>
        </View>
      </View>
    </View>
    <list>
      <item>
        <View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            accessible={true}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "flex": 1,
                },
              ]
            }
            testID="submission-1"
            tvParallaxProperties={undefined}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 40,
                    "marginRight": 8,
                    "width": 40,
                  }
                }
              >
                <View
                  accessibilityLabel=""
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                      Object {
                        "borderRadius": 20,
                      },
                      Object {
                        "backgroundColor": "#F5F5F5",
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "uri": "http://www.fillmurray.com/200/300",
                      }
                    }
                    style={
                      Object {
                        "height": 40,
                        "width": 40,
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingLeft": 8,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                        "fontWeight": "600",
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-semibold",
                      },
                    ]
                  }
                >
                  Bill Murray
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontSize": 14,
                          "paddingTop": 2,
                        },
                        undefined,
                        Object {
                          "color": "#07AF1F",
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                    ]
                  }
                >
                  Submitted
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                      Object {
                        "alignSelf": "center",
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                8
              </Text>
            </View>
          </View>
        </View>
      </item>
    </list>
  </View>
</RCTSafeAreaView>
`;

exports[`QuizSubmissionList navigate to submission settings 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "lightgrey",
          "borderBottomWidth": 0.5,
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "space-between",
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
          }
        }
      >
        <Text
          accessibilityTraits="header"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-heavy",
                "fontSize": 24,
              },
              undefined,
            ]
          }
        >
          All Submissions
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel="Filter Submissions"
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={
          Object {
            "bottom": 15,
            "left": 15,
            "right": 15,
            "top": 15,
          }
        }
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "marginBottom": 1,
            "opacity": 1,
            "width": "auto",
          }
        }
        testID="submission-list.filter"
        tvParallaxProperties={undefined}
      >
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#374A59",
                    "fontSize": 16,
                    "fontWeight": "500",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-medium",
                },
              ]
            }
          >
            Filter
          </Text>
        </View>
      </View>
    </View>
    <list>
      <item>
        <View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            accessible={true}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "flex": 1,
                },
              ]
            }
            testID="submission-1"
            tvParallaxProperties={undefined}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 40,
                    "marginRight": 8,
                    "width": 40,
                  }
                }
              >
                <View
                  accessibilityLabel=""
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Object {
                        "height": 40,
                        "width": 40,
                      },
                      Object {
                        "borderRadius": 20,
                      },
                      Object {
                        "backgroundColor": "#F5F5F5",
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "uri": "http://www.fillmurray.com/200/300",
                      }
                    }
                    style={
                      Object {
                        "height": 40,
                        "width": 40,
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingLeft": 8,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                        "fontWeight": "600",
                      },
                      Object {
                        "fontFamily": ".SFUIDisplay-semibold",
                      },
                    ]
                  }
                >
                  Bill Murray
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "fontSize": 14,
                          "paddingTop": 2,
                        },
                        undefined,
                        Object {
                          "color": "#07AF1F",
                        },
                      ],
                      Object {
                        "fontFamily": ".SFUIDisplay",
                      },
                    ]
                  }
                >
                  Submitted
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontFamily": ".SFUIDisplay",
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Array [
                      Object {
                        "color": "#374A59",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                      Object {
                        "alignSelf": "center",
                      },
                    ],
                    Object {
                      "fontFamily": ".SFUIDisplay-semibold",
                    },
                  ]
                }
              >
                8
              </Text>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "transparent",
                    "borderColor": "#c7c7cc",
                    "borderRightWidth": 2,
                    "borderTopWidth": 2,
                    "height": 10,
                    "marginLeft": 7,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 10,
                  }
                }
              />
            </View>
          </View>
        </View>
      </item>
    </list>
  </View>
</RCTSafeAreaView>
`;
